fixed alignment on title

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 h1 {
   font-family:Courier,Arial,Helvetica,sans-serif;
-  align:center;
+  text-align:center;
 }
 button {
   background-color:black;
